Slightly updated wording.

--- a/LoadVar_from_exisitng_checkpoint.ipynb
+++ b/LoadVar_from_exisitng_checkpoint.ipynb
@@ -24,11 +24,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Define a function that will check the validity of the path and will load the checkpoint reader for you. tf.train.NewCheckpointReader is a nifty  method that creates a CheckpointReader object. CheckpointReader has several very useful methods:\n",
+    "##  CheckpointReader\n",
+    "tf.train.NewCheckpointReader is a nifty  method that creates a CheckpointReader object. CheckpointReader has several very useful methods:\n",
     "* get_variable_to_shape_map() - provides a dictionary with variable names and shapes\n",
     "    * debug_string() - provides a string containing all variables stored in the checkpoint \n",
     "* has_tensor(var_name) - allows to check whether the variable exists in the checkpoint\n",
-    "* get_tensor(var_name) - returns a tensor for the variable name"
+    "* get_tensor(var_name) - returns a tensor for the variable name\n",
+    "\n",
+    "For illustration, I will define a function that will check the validity of the path and will load the checkpoint reader for you. "
    ]
   },
   {
@@ -125,7 +128,7 @@
    "metadata": {},
    "source": [
     "### - reader.has_tensor(var_name) returns bool\n",
-    "It is a convinience method that allows you to check of the provided variable exists in the ckeckpoint"
+    "It is a convinience method that allows you to check whether the variable in question exists in the ckeckpoint"
    ]
   },
   {
@@ -162,8 +165,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### - reader.get_tensor(tensor_name): returns a NumPy array containing the containing the value of the tensor with the given name from the checkpoint.\n",
-    "The normal use would be to recover a tensor first and initialize your own variable with the recovered tensor afterwards:"
+    "### - reader.get_tensor(tensor_name): returns a NumPy array containing the the tensor values from the checkpoint.\n",
+    "The normal use would be to recover a tensor first and then initialize your own variable with the recovered tensor afterwards:"
    ]
   },
   {
